k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: development
spec:
  type: LoadBalancer
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 3000
