k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  namespace: development
  labels:
    name: webapp
spec:
  ingressClassName: nginx
  rules:
    - host: development.ogeraldoluiz.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: webapp
                port:
                  number: 80
